--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   date_format: ^2.0.6
   flutter_webview_plugin: ^0.4.0
+  multi_select_flutter: ^4.1.2
 
 dev_dependencies:
   flutter_test:
